samples/_failures_safe/1761200124_246502_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71fbe563.c: In function ‘main’:
./samples/SAFE/__tmp_71fbe563.c:146:21: error: expected declaration or statement at end of input
  146 |                     print_matrix(&result, "A + B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_71fbe563.c:146:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71fbe563.c:146:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_71fbe563.c:146:21: error: expected declaration or statement at end of input
